# Jetson_Orin_Nano_Gemma_Discord_Bot

./: .env.example  .gitignore  Cargo.toml  README.md
prompts/: system.md
sandbox/: Containerfile
scripts/: build-dev-sandbox.sh  run-bot.sh
src/: attachments.rs  bot.rs  commands.rs  config.rs  llama.rs  main.rs  memory.rs  sandbox.rs  web_search.rs
