[package]
name = "jetson-discord-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
anyhow = "1"
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
scraper = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "http", "model"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[features]
default = ["tls-rustls"]
tls-rustls = ["reqwest/rustls-tls", "serenity/rustls_backend"]
tls-native = ["reqwest/native-tls", "serenity/native_tls_backend"]
